Update and rename 2022-08-28-bash_kernel.ipynb to 2022-08-28-bashkernel.ipynb

--- a/_notebooks/2022-08-28-bashkernel.ipynb
+++ b/_notebooks/2022-08-28-bashkernel.ipynb
@@ -141,7 +141,7 @@
       "-rw-r--r--  1 ekamjotkaire ekamjotkaire       218 Aug 20 18:58 .wget-hsts\n",
       "drwxr-xr-x 17 ekamjotkaire ekamjotkaire      4096 Aug 23 08:46 \u001b[01;34mAPCSA\u001b[0m\n",
       "-rwxr-xr-x  1 ekamjotkaire ekamjotkaire 690850711 May 10 11:35 \u001b[01;32mAnaconda3-2022.05-Linux-x86_64.sh\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire 690850711 May 10 11:35 Anaconda3-2022.05-Linux-x86_64.sh.1\n",
+      "-rw-r--r--  1 ekamjotkaire ekamjotkaire 690850711 May 10 11:35 Anaconda3-2022.05-Linux-x86_64.sh.1\n"
      ]
     }
    ],
