--- a/_notebooks/2022-08-28-bashkernel.ipynb
+++ b/_notebooks/2022-08-28-bashkernel.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 14,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -17,20 +17,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Using conditional statement to create a project directory and project\n",
-      "Directory /home/ekamjotkaire/vscode exists.\n",
-      "Directory /home/ekamjotkaire/vscode/APCSA does not exists... cloning https://github.com/nighthawkcoders/APCSA.git\n",
-      "Cloning into 'APCSA'...\n",
-      "remote: Enumerating objects: 8951, done.\u001b[K\n",
-      "remote: Counting objects: 100% (428/428), done.\u001b[K\n",
-      "remote: Compressing objects: 100% (206/206), done.\u001b[K\n",
-      "remote: Total 8951 (delta 248), reused 380 (delta 213), pack-reused 8523\u001b[K\n",
-      "Receiving objects: 100% (8951/8951), 14.50 MiB | 1.78 MiB/s, done.\n",
-      "Resolving deltas: 100% (5022/5022), done.\n",
-      "Directory /home/ekamjotkaire/vscode/APCSA exists.\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (735650686.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [14]\u001b[0;36m\u001b[0m\n\u001b[0;31m    echo \"Using conditional statement to create a project directory and project\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -75,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 11,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -83,65 +74,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Navigate to project, then navigate to area wwhere files were cloned\n",
-      "/home/ekamjotkaire\n",
-      "\n",
-      "list top level or root of files with project pulled from github\n",
-      "\u001b[0m\u001b[01;34mAPCSA\u001b[0m                                \u001b[01;31mijava-1.3.0.zip\u001b[0m\n",
-      "\u001b[01;32mAnaconda3-2022.05-Linux-x86_64.sh\u001b[0m    install.py\n",
-      "Anaconda3-2022.05-Linux-x86_64.sh.1  \u001b[01;34mjava\u001b[0m\n",
-      "Anaconda3-2022.05-Linux-x86_64.sh.2  \u001b[01;34mjunk\u001b[0m\n",
-      "Anaconda3-2022.05-Linux-x86_64.sh.3  \u001b[01;34mvscode\u001b[0m\n",
-      "\u001b[01;34manaconda3\u001b[0m\n",
-      "\n",
-      "list again with hidden files pulled from github\n",
-      "\u001b[0m\u001b[01;34m.\u001b[0m              \u001b[01;34m.landscape\u001b[0m                 .wget-hsts\n",
-      "\u001b[01;34m..\u001b[0m             .lesshst                   \u001b[01;34mAPCSA\u001b[0m\n",
-      ".bash_history  \u001b[01;34m.local\u001b[0m                     \u001b[01;32mAnaconda3-2022.05-Linux-x86_64.sh\u001b[0m\n",
-      ".bash_logout   \u001b[01;34m.m2\u001b[0m                        Anaconda3-2022.05-Linux-x86_64.sh.1\n",
-      ".bashrc        .motd_shown                Anaconda3-2022.05-Linux-x86_64.sh.2\n",
-      "\u001b[01;34m.cache\u001b[0m         \u001b[01;34m.node-gyp\u001b[0m                  Anaconda3-2022.05-Linux-x86_64.sh.3\n",
-      "\u001b[01;34m.conda\u001b[0m         \u001b[01;34m.npm\u001b[0m                       \u001b[01;34manaconda3\u001b[0m\n",
-      "\u001b[01;34m.config\u001b[0m        .profile                   \u001b[01;31mijava-1.3.0.zip\u001b[0m\n",
-      "\u001b[01;34m.dbus\u001b[0m          .sudo_as_admin_successful  install.py\n",
-      ".gitconfig     \u001b[01;34m.vim\u001b[0m                       \u001b[01;34mjava\u001b[0m\n",
-      "\u001b[01;34m.ipython\u001b[0m       .viminfo                   \u001b[01;34mjunk\u001b[0m\n",
-      "\u001b[01;34m.jupyter\u001b[0m       \u001b[01;34m.vscode-server\u001b[0m             \u001b[01;34mvscode\u001b[0m\n",
-      "bash: cd: /home/ekamjotkaire/vscode/fast-pages/: No such file or directory\n",
-      "\n",
-      "list all files in long format\n",
-      "total 2702080\n",
-      "drwxr-xr-x 20 ekamjotkaire ekamjotkaire      4096 Aug 23 08:50 \u001b[0m\u001b[01;34m.\u001b[0m\n",
-      "drwxr-xr-x  3 root  root       4096 Aug 18 22:39 \u001b[01;34m..\u001b[0m\n",
-      "-rw-------  1 ekamjotkaire ekamjotkaire     15229 Aug 26 00:22 .bash_history\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire       220 Aug 18 22:39 .bash_logout\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire     4246 Aug 19 09:38 .bashrc\n",
-      "drwxr-xr-x  7 ekamjotkaire ekamjotkaire      4096 Aug 23 08:50 \u001b[01;34m.cache\u001b[0m\n",
-      "drwxr-xr-x  2 ekamjotkaire ekamjotkaire      4096 Aug 19 09:23 \u001b[01;34m.conda\u001b[0m\n",
-      "drwxr-xr-x  3 ekamjotkaire ekamjotkaire      4096 Aug 23 08:50 \u001b[01;34m.config\u001b[0m\n",
-      "drwx------  3 ekamjotkaire ekamjotkaire      4096 Aug 20 17:56 \u001b[01;34m.dbus\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire        56 Aug 18 22:51 .gitconfig\n",
-      "drwxr-xr-x  3 ekamjotkaire ekamjotkaire      4096 Aug 20 18:46 \u001b[01;34m.ipython\u001b[0m\n",
-      "drwxr-xr-x  2 ekamjotkaire ekamjotkaire      4096 Aug 20 11:29 \u001b[01;34m.jupyter\u001b[0m\n",
-      "drwxr-xr-x  2 ekamjotkaire ekamjotkaire      4096 Aug 18 22:39 \u001b[01;34m.landscape\u001b[0m\n",
-      "-rw-------  1 ekamjotkaire ekamjotkaire        28 Aug 20 18:35 .lesshst\n",
-      "drwxr-xr-x  5 ekamjotkaire ekamjotkaire      4096 Aug 20 18:46 \u001b[01;34m.local\u001b[0m\n",
-      "drwxr-xr-x  3 ekamjotkaire ekamjotkaire      4096 Aug 21 21:48 \u001b[01;34m.m2\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire         0 Aug 26 08:36 .motd_shown\n",
-      "drwxr-xr-x  3 ekamjotkaire ekamjotkaire     4096 Aug 20 11:30 \u001b[01;34m.node-gyp\u001b[0m\n",
-      "drwxr-xr-x 13 ekamjotkaire ekamjotkaire      4096 Aug 20 16:27 \u001b[01;34m.npm\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire       807 Aug 18 22:39 .profile\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire         0 Aug 18 22:44 .sudo_as_admin_successful\n",
-      "drwxr-xr-x  2 ekamjotkaire ekamjotkaire      4096 Aug 21 19:39 \u001b[01;34m.vim\u001b[0m\n",
-      "-rw-------  1 ekamjotkaire ekamjotkaire       805 Aug 21 19:39 .viminfo\n",
-      "drwxr-xr-x  5 ekamjotkaire ekamjotkaire      4096 Aug 18 23:03 \u001b[01;34m.vscode-server\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire       218 Aug 20 18:58 .wget-hsts\n",
-      "drwxr-xr-x 17 ekamjotkaire ekamjotkaire      4096 Aug 23 08:46 \u001b[01;34mAPCSA\u001b[0m\n",
-      "-rwxr-xr-x  1 ekamjotkaire ekamjotkaire 690850711 May 10 11:35 \u001b[01;32mAnaconda3-2022.05-Linux-x86_64.sh\u001b[0m\n",
-      "-rw-r--r--  1 ekamjotkaire ekamjotkaire 690850711 May 10 11:35 Anaconda3-2022.05-Linux-x86_64.sh.1\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (684408076.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [11]\u001b[0;36m\u001b[0m\n\u001b[0;31m    echo \"Navigate to project, then navigate to area wwhere files were cloned\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
@@ -174,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {
     "vscode": {
      "languageId": "shellscript"
@@ -182,22 +119,11 @@
    },
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Look for posts\n",
-      "bash: cd: /_posts: No such file or directory\n",
-      "/home/ekamjotkaire/vscode/fast-pages/_notebooks\n",
-      "bash: cd: /home/ekamjotkaire/vscode/fast-pages/_posts: No such file or directory\n",
-      "total 3144\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire 3162470 Aug 21 19:36 2020-02-20-test.ipynb\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire     888 Aug 24 10:16 2022-08-20-java.ipynb\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire     941 Aug 23 22:26 2022-08-20-python.ipynb\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire    4288 Aug 25 22:57 2022-08-24-score_calculator.ipynb\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire   23435 Aug 25 23:18 2022-08-25-bash_kernel.ipynb\n",
-      "-rw-r--r-- 1 ekamjotkaire ekamjotkaire     771 Aug 21 19:36 README.md\n",
-      "drwxr-xr-x 2 ekamjotkaire ekamjotkaire    4096 Aug 21 19:36 \u001b[0m\u001b[01;34mghtop_images\u001b[0m\n",
-      "drwxr-xr-x 2 ekamjotkaire ekamjotkaire    4096 Aug 21 19:36 \u001b[01;34mmy_icons\u001b[0m\n"
+     "ename": "SyntaxError",
+     "evalue": "invalid syntax (1316686832.py, line 1)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  Input \u001b[0;32mIn [9]\u001b[0;36m\u001b[0m\n\u001b[0;31m    echo \"Look for posts\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
      ]
     }
    ],
