--- a/_notebooks/2022-08-24-python-notebook-test.ipynb
+++ b/_notebooks/2022-08-24-python-notebook-test.ipynb
@@ -9,25 +9,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "hello world\n"
+      "hello world\n",
+      "correct!\n",
+      "correct!\n",
+      "2\n"
      ]
     }
    ],
    "source": [
-    "print(\"hello world\")"
+    "print(\"hello world\")\n",
+    "\n",
+    "score = 0\n",
+    "\n",
+    "def testing(input, answer, score):\n",
+    "    if input == answer: \n",
+    "        score = score + 1 \n",
+    "        print(\"correct!\")\n",
+    "        return score\n",
+    "    else:\n",
+    "        print(\"wrong answer\")\n",
+    "        \n",
+    "score1 = testing(input(), \"hello\", score)\n",
+    "score2 = testing(input(), \"bye\", score)\n",
+    "\n",
+    "score = score1 + score2\n",
+    "\n",
+    "print(score)"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -41,12 +61,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
