--- a/_notebooks/2022-08-29-quiz.ipynb
+++ b/_notebooks/2022-08-29-quiz.ipynb
@@ -2,23 +2,16 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Hello, ekamjotkaire running /usr/local/bin/python3\n",
-      "You will be asked 3 questions.\n",
-      "Are you ready to take a test?\n",
-      "Question: Who was the second president of the United States?\n",
-      " is incorrect!\n",
-      "Question: How many stars are on the US flag?\n",
-      " is incorrect!\n",
-      "Question: How old do you need to be to run for POTUS\n",
-      " is incorrect!\n",
-      "ekamjotkaire you scored 0/3\n"
+      "Welcome to the Frog quiz\n",
+      "You will be given 3 questions\n",
+      "Question 1: How many toes does a poison dart frog have on each foot?\n"
      ]
     }
    ],
@@ -27,40 +20,27 @@
     "\n",
     "import getpass, sys\n",
     "\n",
-    "def question_with_response(prompt):\n",
-    "    print(\"Question: \" + prompt)\n",
-    "    msg = input()\n",
-    "    return msg\n",
+    "print(\"Welcome to the Frog quiz\")\n",
+    "print(\"You will be given 3 questions\")\n",
+    "score = 0\n",
     "\n",
-    "questions = 3\n",
-    "correct = 0\n",
+    "def testing(input, answer, score):\n",
+    "    if input == answer: \n",
+    "        score = score + 1 \n",
+    "        print(\"correct!\")\n",
+    "        return score\n",
+    "    else:\n",
+    "        print(\"wrong answer\")\n",
+    "        \n",
+    "print(\"Question 1: How many toes does a poison dart frog have on each foot?\")        \n",
+    "score1 = testing(input(), \"4\", score)\n",
+    "print(\"How many species of frog are there?\")\n",
+    "score2 = testing(input(), \"5000\", score)\n",
+    "print(\"Can a frog play the violin?\")\n",
+    "score3 = testing(input(), \"no\", score)\n",
     "\n",
-    "print('Hello, ' + getpass.getuser() + \" running \" + sys.executable)\n",
-    "print(\"You will be asked \" + str(questions) + \" questions.\")\n",
-    "print (\"Are you ready to take a test?\")\n",
-    "\n",
-    "rsp = question_with_response(\"Who was the second president of the United States?\")\n",
-    "if rsp == \"John Adams\":\n",
-    "    print(rsp + \" is correct!\")\n",
-    "    correct += 1\n",
-    "else:\n",
-    "    print(rsp + \" is incorrect!\")\n",
-    "\n",
-    "rsp = question_with_response(\"How many stars are on the US flag?\")\n",
-    "if rsp == \"fifty\":\n",
-    "    print(rsp + \" is correct!\")\n",
-    "    correct += 1\n",
-    "else:\n",
-    "    print(rsp + \" is incorrect!\")\n",
-    "\n",
-    "rsp = question_with_response(\"How old do you need to be to run for POTUS\")\n",
-    "if rsp == \"thrity-five\":\n",
-    "    print(rsp + \" is correct!\")\n",
-    "    correct += 1\n",
-    "else:\n",
-    "    print(rsp + \" is incorrect!\")\n",
-    "\n",
-    "print(getpass.getuser() + \" you scored \" + str(correct) +\"/\" + str(questions))\n"
+    "score = score1 + score2 + score3\n",
+    "print(score)"
    ]
   }
  ],
