--- a/_notebooks/2022-08-28-bashkernel.ipynb
+++ b/_notebooks/2022-08-28-bashkernel.ipynb
@@ -8,6 +8,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "- toc: true\n",
+    "- comments: true\n",
+    "- categories: [Week 1]"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {
