--- a/_notebooks/2022-08-30-dogdatabase.ipynb
+++ b/_notebooks/2022-08-30-dogdatabase.ipynb
@@ -4,27 +4,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Lists and Dictionaries Assignment "
+    "# Lists and Dictionaries Assignments"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Print explanation:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello. Which dog breed would you like to know about?\n",
-      "options: golden retriever, labrador, husky, border collie, german shepard\n",
-      "error; please type in one of the options\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"Hello. Which dog breed would you like to know about?\")\n",
-    "print(\"options: golden retriever, labrador, husky, border collie, german shepard\")\n",
+    "print(\"options: golden retriever, labrador, husky, border collie, german shepard\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Define Databases for each dog breed"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "\n",
     "#golden retriever \n",
     "GoldR_DB = {\n",
@@ -69,12 +81,44 @@
     "    \"Temperament\" : [\"Stubborn, Confident, Courageous, Protective\"],\n",
     "    \"Weight\" : \"49-71 lbs\",\n",
     "    \"Height\" : \"22-26 in\",\n",
-    "}\n",
-    "\n",
+    "} \n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "prints database based on user's input "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      " \n",
+      "Labrador Info:\n",
+      " \n",
+      "Breed : Golden Retriever\n",
+      "Life span : 10-12 years\n",
+      "Temperament : ['Intelligent, Reliable, Kind, Trustworthy']\n",
+      "Weight : 55-75 lbs\n",
+      "Height : 20-24 in\n"
+     ]
+    }
+   ],
+   "source": [
+    "#takes input from users \n",
     "def users_pick(prompt):\n",
     "    msg = input()\n",
     "    return msg\n",
     "\n",
+    "#prints according to input \n",
     "rsp = users_pick(\"enter breed here:\")\n",
     "if rsp == \"golden retriever\":\n",
     "    print(\" \")\n",
@@ -107,8 +151,7 @@
     "    for key, value in GermShep_DB.items():\n",
     "        print(key, \":\", value)\n",
     "else:\n",
-    "    print(\"error; please type in one of the given options\")  \n",
-    " "
+    "    print(\"error; please type in one of the given options\") "
    ]
   }
  ],
