Update and rename 2022-09-22 to 2022-09-22-unit1.1

--- a/_posts/2022-09-22-unit1.1
+++ b/_posts/2022-09-22-unit1.1
@@ -5,6 +5,7 @@ categories: [Week 4]
 title: Unit 1.1: Collaboration
 ---
 
+# Unit 1.1: Collaboration
 # Video 1:
 
 - Collaboration can bring together people who specialize in different skills, so that everyone can show their strengths, and supported with their weaknesses
