--- a/_notebooks/2022-08-24-python-notebook-test.ipynb
+++ b/_notebooks/2022-08-24-python-notebook-test.ipynb
@@ -47,7 +47,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12 ('base')",
+   "display_name": "Python 3.9.12 ('myenv': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -66,7 +66,7 @@
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "0f949f575de49a1a8cd4f0d30b0da0a6a4839cc972748a1d0962ff07d579e36d"
+    "hash": "d683745090ab2625d257ed12473cf2b24e327d7d6cf1c3940ba01281b86926eb"
    }
   }
  },
