--- a/_notebooks/2022-08-28-toolinstallation.ipynb
+++ b/_notebooks/2022-08-28-toolinstallation.ipynb
@@ -10,24 +10,32 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": [
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "execution_count": 1,
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
-     "evalue": "invalid syntax (735650686.py, line 1)",
+     "evalue": "Unexpected string",
      "output_type": "error",
      "traceback": [
-      "\u001b[0;36m  Input \u001b[0;32mIn [14]\u001b[0;36m\u001b[0m\n\u001b[0;31m    echo \"Using conditional statement to create a project directory and project\"\u001b[0m\n\u001b[0m         ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
+      "evalmachine.<anonymous>:1",
+      "echo \"Using conditional statement to create a project directory and project\"",
+      "     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^",
+      "",
+      "SyntaxError: Unexpected string",
+      "    at new Script (vm.js:79:7)",
+      "    at createScript (vm.js:251:10)",
+      "    at Object.runInThisContext (vm.js:303:10)",
+      "    at run ([eval]:1020:15)",
+      "    at onRunRequest ([eval]:864:18)",
+      "    at onMessage ([eval]:828:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
      ]
     }
    ],
@@ -73,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -118,11 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -154,11 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -200,11 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -245,11 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -321,11 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "shellscript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -377,16 +361,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
-   "codemirror_mode": "shell",
-   "file_extension": ".sh",
-   "mimetype": "text/x-sh",
-   "name": "python",
-   "version": "3.10.6"
+   "file_extension": ".js",
+   "mimetype": "application/javascript",
+   "name": "javascript",
+   "version": "10.13.0"
   },
   "orig_nbformat": 4,
   "vscode": {
