--- a/_posts/2022-09-27-1.2notes.md
+++ b/_posts/2022-09-27-1.2notes.md
@@ -38,6 +38,76 @@ Examples:
 # Video 2
 
 
+- input: data sent to a computer to be processed by a program
+- event: an action that gives input data to a program -- can be generated when a key is pressed, a button is clicked, a program is started, etc
+- inputs (usually) affects the output of program
+- output is data sent from a program to a device 
+
+types of inputs:
+- tactile (touch)
+- audio
+- visual 
+- text (including numbers)
+
+example: smart phone/tablet:
+- touch screen: tactile -- how you touch, where you touch, movements
+- physical buttons 
+- audio: you can say things to your phone
+- visual: facial recognition 
+
+how do programs receive input?:
+- programs are written in an event driven program 
+- events are triggered by actions, and these actions usually send input to program
+- different types of "events" a user can trigger: button click, taps/swiping, keyboard entries, audio triggers
+
+input might not always affect output: if a phone is off clicking a button does nothing. You have to follow the correct sequence of events
+
+types of outputs produced by device: 
+- visual 
+- audio 
+- text 
+
+how does a program know what to do when an event takes place?:
+- actions done by the user or another program can trigger events 
+- program "jumps" to code segment related to specific events -- code segment is executed and output is given 
+- program is not necessarily executed in order that the lines are written in 
+
+# Video 3: 
+
+what is a program (also called software)?
+a program is a collection of statements:
+
+statement: a single command 
+code segment: group of statements -- these statements are executed according to program rules 
+
+example: 
+
+min <-- alist[1]
+for EACH item in alist
+{
+    IF (item < min)
+    {
+        min <-- item
+    }
+}
+DISPLAY ("The minimum number in the list is")
+DISPLAY min
+
+explanation: The code starts at item 1 in alist and assigns it to min. Then, for each number in the list after 1, if the number is less than min, it assigns the new number as min. At the end it prints the min # 
+
+what does this program do? 
+- finds the minimum value in the list
+
+looking at the purpose, we have to find potential issues:
+- program would need to work for lists with #s out of order 
+- what about negative numbers (should it take them into account?) 
+- very large numbers; some languages might not allow large #s
+- decimals; some languages store decimals as a different type (not int)
+
+when describing code segment:
+- explain what it does so that others can insert it into larger programs
+- you could include how it does what it does (somebody might want to expand on it)
+
 
 
 
