--- a/_posts/2022-10-05-1.4notes.md
+++ b/_posts/2022-10-05-1.4notes.md
@@ -23,3 +23,42 @@ title: Unit 1.4 - Identifying and Correcting Errors
 -> good programers can identify what type of error it is and act accordingly 
 
 
+# Video 2: 
+
+good ways to find and correct errors: 
+- test cases 
+- hand tracing 
+- visualizations
+- debuggers
+- adding extra output statements
+
+what to do once an error has been found:
+
+-> easiest error to correct is a syntax error -- traceback info states which line the error is happening (though sometimes a little more searching is needed)
+
+-> logic errors are much more difficult -- in this case, test cases are helpful
+- test cases: using specific, varying inputs to test whether the input works, and to find where the problem is
+
+grade <-- INPUT("enter a grade")
+if (grade > 89) {
+    DISPLAY ("A") }
+if (grade > 79) {
+    DISPLAY ("B") }... etc
+
+    good test cases would be numbers within those intervals -- also consider: would decimals work? What about negative numbers?
+
+
+Hand tracing (most useful for loops): writing out the values of the variables of a loop as the loop iterates
+- useful for a loop that repeats a small number of times
+- larger loops need a debugging program
+
+Adding extra output statements: 
+- used to help find errors
+- once the error is corrected, the extra output statements are usually removed
+- similar to hand tracing but makes computer do most of the work
+
+If all the above strategies fail:
+- visuals and debuggers can sometimes be used
+- visualizations: graphs, images, colors (or anything else that can be seen) that can show whether or not the program is working
+- debuggers: software designed to test programs -- can be paused in the middle of running to test whether that section is working correctly
+
