--- a/_posts/2022-10-05-1.4notes.md
+++ b/_posts/2022-10-05-1.4notes.md
@@ -39,10 +39,10 @@ what to do once an error has been found:
 -> logic errors are much more difficult -- in this case, test cases are helpful
 - test cases: using specific, varying inputs to test whether the input works, and to find where the problem is
 
-grade <-- INPUT("enter a grade")
-if (grade > 89) {
-    DISPLAY ("A") }
-if (grade > 79) {
+grade <-- INPUT("enter a grade")<br>
+if (grade > 89) {<br>
+    DISPLAY ("A") }<br>
+if (grade > 79) {<br>
     DISPLAY ("B") }... etc
 
 good test cases would be numbers within those intervals -- also consider: would decimals work? What about negative numbers?
