--- a/_posts/2022-10-05-1.4notes.md
+++ b/_posts/2022-10-05-1.4notes.md
@@ -62,3 +62,11 @@ If all the above strategies fail:
 - visualizations: graphs, images, colors (or anything else that can be seen) that can show whether or not the program is working
 - debuggers: software designed to test programs -- can be paused in the middle of running to test whether that section is working correctly
 
+# Video 3: 
+
+- programmers start thinking about testing as soon as they start programming 
+- ask yourself: "how will I know the program is working correctly?"
+
+- programmers have defined inputs to check whether or not the program is working 
+
+testing is a cycle of testing and refining 
