--- a/_notebooks/2022-09-28-javascipt-table.ipynb
+++ b/_notebooks/2022-09-28-javascipt-table.ipynb
@@ -10,7 +10,11 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [],
    "source": [
     "// define a function to hold data for a Person\n",
@@ -41,7 +45,11 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -136,7 +144,11 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "data": {
@@ -200,17 +212,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
-   "version": "10.13.0"
+   "name": "python",
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
