--- a/_notebooks/2022-10-03-AP-error_testing.ipynb
+++ b/_notebooks/2022-10-03-AP-error_testing.ipynb
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 100,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -339,7 +339,8 @@
       "burger  $3.99\n",
       "fries  $1.99\n",
       "drink  $0.99\n",
-      "1.99\n"
+      "your total is:\n",
+      "3.99\n"
      ]
     }
    ],
@@ -365,6 +366,7 @@
     "    total = total + menu[\"drink\"]\n",
     "    \n",
     "#code should add the price of the menu items selected by the user \n",
+    "print(\"your total is:\")\n",
     "print(total)"
    ]
   },
