--- a/_posts/2022-10-11-4.1notes.md
+++ b/_posts/2022-10-11-4.1notes.md
@@ -40,3 +40,30 @@ Vocab:
 - computer device: a device that can run a program (like computers, tablets, servers, routers, etc)
 - bandwidth: the maximum amount of data a computer can send at a time
 - computer network: interconnected computing devices that can send and receive data from each other
+
+
+# Video 2:
+
+- protocol: an agreed-upon set of rules that spell out the behavior of a system
+- Internet Engineering Task Force: discussed the protocols/rules to send info from one computer device to another
+
+Network access layer:
+- deals w/ hardware
+- starts w/ something like wifi card
+- has a MAC address
+
+Internet Protocol Layer (narrow waist):
+- package is set up w/ metadata -- has sender IP and receiver IP
+- goes through a path of router
+- like passing a note through a class
+- there are multiple paths that the package can take -- internet is flexible and scalable (it is able to change in size to meet new demands)
+
+Transport Layer:
+- Two most popular protocols: TCP and UDP
+- TCP is stricter (makes sure the package has been delivered): uses "three way handshake" to certify delivery 
+- UDP is more relaxed 
+
+Application Layer: 
+- DNS: Domain Name Service -- translates numbers into a URL readable by humans which directs you to an IP address
+- WWW: World Wide Web: network of linked data pages over the Internet (NOT the internet itself)
+- http/https: asking to receive data from web servers (https is more secure)
