--- a/_notebooks/2022-08-28-toolinstallation.ipynb
+++ b/_notebooks/2022-08-28-toolinstallation.ipynb
@@ -15,7 +15,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -81,7 +85,11 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -122,7 +130,11 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -154,7 +166,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -196,7 +212,11 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -237,7 +257,11 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -309,7 +333,11 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -361,15 +389,15 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
-   "version": "10.13.0"
+   "name": "python",
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
