--- a/_posts/2022-10-11-4.1notes.md
+++ b/_posts/2022-10-11-4.1notes.md
@@ -66,4 +66,4 @@ Transport Layer:
 Application Layer: 
 - DNS: Domain Name Service -- translates numbers into a URL readable by humans which directs you to an IP address
 - WWW: World Wide Web: network of linked data pages over the Internet (NOT the internet itself)
-- http/https: asking to receive data from web servers (https is more secure)
+- http/https: asking to receive data from web servers (https is a more secure version of http)
