--- a/_notebooks/2022-90-26-javascriptusage.ipynb
+++ b/_notebooks/2022-90-26-javascriptusage.ipynb
@@ -20,7 +20,11 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -46,7 +50,11 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -74,7 +82,11 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -105,7 +117,11 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -129,17 +145,22 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "JavaScript (Node.js)",
-   "language": "javascript",
-   "name": "javascript"
+   "display_name": "Python 3.10.6 64-bit",
+   "language": "python",
+   "name": "python3"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "javascript",
-   "version": "10.13.0"
+   "name": "python",
+   "version": "3.10.6"
   },
-  "orig_nbformat": 4
+  "orig_nbformat": 4,
+  "vscode": {
+   "interpreter": {
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
+   }
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
