--- a/_notebooks/2022-08-28-toolinstallation.ipynb
+++ b/_notebooks/2022-08-28-toolinstallation.ipynb
@@ -15,11 +15,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -85,11 +81,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -130,11 +122,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "ename": "SyntaxError",
@@ -166,11 +154,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -212,11 +196,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -257,11 +237,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -333,11 +309,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "metadata": {
-    "vscode": {
-     "languageId": "javascript"
-    }
-   },
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -389,14 +361,14 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.6 64-bit",
-   "language": "python",
-   "name": "python3"
+   "display_name": "JavaScript (Node.js)",
+   "language": "javascript",
+   "name": "javascript"
   },
   "language_info": {
    "file_extension": ".js",
    "mimetype": "application/javascript",
-   "name": "python",
+   "name": "javascript",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
