--- a/_notebooks/2022-11-28-lessons1and2.ipynb
+++ b/_notebooks/2022-11-28-lessons1and2.ipynb
@@ -20,7 +20,7 @@
     "\n",
     "# Types of Data:\n",
     "\n",
-    "- integer: number\n",
+    "- integer: numbers\n",
     "- string: words/text\n",
     "-boolean: determines if something is true or false\n",
     "\n",
