--- a/_notebooks/2022-08-30-dogdatabase.ipynb
+++ b/_notebooks/2022-08-30-dogdatabase.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +18,14 @@
      "text": [
       "Hello. Which dog breed would you like to know about?\n",
       "options: golden retriever, labrador, husky, border collie, german shepard\n",
-      "error; please type in one of the options\n"
+      " \n",
+      "Golden Retriever Info:\n",
+      " \n",
+      "Breed : Golden Retriever\n",
+      "Life span : 10-12 years\n",
+      "Temperament : ['Intelligent, Reliable, Kind, Trustworthy']\n",
+      "Weight : 55-75 lbs\n",
+      "Height : 20-24 in\n"
      ]
     }
    ],
