--- a/_notebooks/2022-2-27-day1.ipynb
+++ b/_notebooks/2022-2-27-day1.ipynb
@@ -4,8 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Variables, Assignments, and Data Abstraction\n",
-    ">Welcome to our lecture!\n",
+    "# Section 3.1 and 3.2\n",
+    ">\n",
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [lectures]"
@@ -296,6 +296,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colors = [\"green\", \"red\", \"pink\", \"purple\", \"blue\", \"brown\"]\n",
+    "for x in colors:\n",
+    "    print(x)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -511,74 +522,102 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Question1\n",
-      "\n",
-      "Correct! Score: 1\n",
-      "Question2\n",
-      "\n",
-      "Incorrect! The correct answer was Solution2\n",
-      "\n",
-      "Question3\n",
-      "\n",
-      "Incorrect! The correct answer was Solution3\n",
-      "\n",
-      "Question4\n",
-      "\n",
-      "Incorrect! The correct answer was Solution4\n",
-      "\n"
-     ]
-    },
-    {
-     "ename": "IndexError",
-     "evalue": "list index out of range",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
-      "\u001b[1;32m/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb Cell 39\u001b[0m in \u001b[0;36m<cell line: 13>\u001b[0;34m()\u001b[0m\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m quesAmount\u001b[39m=\u001b[39m \u001b[39mlen\u001b[39m(quesList)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m \u001b[39mwhile\u001b[39;00m quesCount \u001b[39m<\u001b[39m\u001b[39m=\u001b[39m quesAmount:\n\u001b[0;32m---> <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m     \u001b[39mprint\u001b[39m(quesList[quesCount] \u001b[39m+\u001b[39m \u001b[39m\"\u001b[39m\u001b[39m\\n\u001b[39;00m\u001b[39m\"\u001b[39m)\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m     guess \u001b[39m=\u001b[39m \u001b[39minput\u001b[39m()\n\u001b[1;32m     <a href='vscode-notebook-cell:/Users/gianninaortegarico/vscode/t2p3t1/_notebooks/2022-2-27-var-ass-dataab-lecture.ipynb#X54sZmlsZQ%3D%3D?line=15'>16</a>\u001b[0m     \u001b[39mif\u001b[39;00m(guess \u001b[39m==\u001b[39m soluList[quesCount]):\n",
-      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
-    "# Defining my variables here\n",
-    "quesCount = 0\n",
+    "print(\"Hello. Which dog breed would you like to know about?\")\n",
+    "print(\"options: golden retriever, labrador, husky, border collie, german shepard\")\n",
     "\n",
-    "# Use a dictionary for the questions\n",
-    "quesList = [\"Question1\", \"Question2\", \"Question3\", \"Question4\"]\n",
+    "#golden retriever \n",
+    "GoldR_DB = {\n",
+    "    \"Breed\": \"Golden Retriever\",\n",
+    "    \"Life span\": \"10-12 years\",\n",
+    "    \"Temperament\": [\"Intelligent, Reliable, Kind, Trustworthy\"],\n",
+    "    \"Weight\": \"55-75 lbs\",\n",
+    "    \"Height\": \"20-24 in\",\n",
+    "}\n",
     "\n",
-    "# Use a dictionary for the correct solutions\n",
-    "soluList = [\"Solution1\", \"Solution2\", \"Solution3\", \"Solution4\"]\n",
+    "#labrador  \n",
+    "Lab_DB = {\n",
+    "    \"Breed\": \"Labrador\",\n",
+    "    \"Life span\": \"10-12 years\",\n",
+    "    \"Temperament\": [\"Outgoing, Agile, Intelligent, Trustworthy\"],\n",
+    "    \"Weight\": \"55-71 lbs\",\n",
+    "    \"Height\": \"22-24 in\",\n",
+    "}\n",
     "\n",
-    "quesAmount= len(quesList)\n",
+    "#husky  \n",
+    "Husky_DB = {\n",
+    "    \"Breed\": \"Husky\",\n",
+    "    \"Life span\": \"10-16 years\",\n",
+    "    \"Temperament\": [\"Loyal, Playful, Intelligent, Friendly\"],\n",
+    "    \"Weight\": \"44-66 lbs\",\n",
+    "    \"Height\": \"22-24 in\",\n",
+    "}\n",
     "\n",
-    "hrm quesCount <= quesAmount:\n",
-    "    print(quesList[quescount] + \"\\n\")\n",
-    "    guess = input()\n",
-    "    if(guess == soluList[quesamOOuaunt]):\n",
-    "        score+=1\n",
-    "        print(\"Correct! Score: \")\n",
-    "    else: \n",
-    "        print(\"Incorrect! The correct answer was \" + soluList(quescount) + \"\\n\")\n",
-    "    quesCount += 1\n",
+    "#border collie \n",
+    "BordColl_DB = {\n",
+    "    \"Breed\" : \"Border Collie\",\n",
+    "    \"Life span\" : \"10-17 years\",\n",
+    "    \"Temperament\" : [\"Energetic, Keen, Alert, Athletic\"],\n",
+    "    \"Weight\": \"27-45 lbs\",\n",
+    "    \"Height\": \"19-22 in\",\n",
+    "}\n",
     "\n",
+    "#german shepard \n",
+    "GermShep_DB = {\n",
+    "    \"Breed\" : \"German Shepard\",\n",
+    "    \"Life Span\" : \"9-13 years\",\n",
+    "    \"Temperament\" : [\"Stubborn, Confident, Courageous, Protective\"],\n",
+    "    \"Weight\" : \"49-71 lbs\",\n",
+    "    \"Height\" : \"22-26 in\",\n",
+    "}\n",
     "\n",
+    "def users_pick(prompt):\n",
+    "    msg = input()\n",
+    "    return msg\n",
     "\n",
-    "\n",
-    "print(\"Final score: \" + str(score))"
+    "#prints according to input \n",
+    "rsp = users_pick(\"enter breed here:\")\n",
+    "if rsp == \"golden retriever\": \n",
+    "    print(\" \") \n",
+    "    print(\"Golden Retriever Info:\")\n",
+    "    print(\" \")\n",
+    "    for key, value in GoldR_DB.items():\n",
+    "        print(key, \":\", value)\n",
+    "elif rsp == \"labrador\":\n",
+    "    print(\" \")\n",
+    "    print(\"Labrador Info:\")\n",
+    "    print(\" \")\n",
+    "    for key, value in GoldR_DB.items():\n",
+    "        print(key, \":\", value)\n",
+    "elif rsp == \"husky\":\n",
+    "    print(\" \")\n",
+    "    print(\"Husky Info:\")\n",
+    "    print(\" \")\n",
+    "    for key, value in Husky_DB.items():\n",
+    "        print(key, \":\", value)\n",
+    "elif rsp == \"border collie\":\n",
+    "    print(\" \")\n",
+    "    print(\"Border Collie Info:\")\n",
+    "    print(\" \")\n",
+    "    for key, value in BordColl_DB.items():\n",
+    "        print(key, \":\", value)\n",
+    "elif rsp == \"german shepard\":\n",
+    "    print(\" \")\n",
+    "    print(\"German Shepard Info:\")\n",
+    "    print(\" \")\n",
+    "    for key, value in GermShep_DB.items():\n",
+    "        print(key, \":\", value)\n",
+    "else:\n",
+    "    print(\"error; please type in one of the given options\")  "
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.8.10 64-bit",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -592,12 +631,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.10"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
