--- a/_notebooks/2022-12-01-portfolio.ipynb
+++ b/_notebooks/2022-12-01-portfolio.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "- Sections 3.1 and 3.2: Variables, Assignments, and Data Abstractions: https://ekamjot-kaire.github.io/fast-pages/lectures/2022/11/29/day1.html\n",
     "\n",
-    "- Sections 3.3 and 3.4: Mathematical Expressions and Strings (we taught this one): https://manigggg18.github.io/manimani/jupyter/lesson2\n"
+    "- Sections 3.3 and 3.4: Mathematical Expressions and Strings (we taught this one!): https://manigggg18.github.io/manimani/jupyter/lesson2"
    ]
   }
  ],
