--- a/_notebooks/2022-12-01-day3.ipynb
+++ b/_notebooks/2022-12-01-day3.ipynb
@@ -4,10 +4,10 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Unit 3 Sections 5-7\n",
-    "> Welcome to the World of Booleans and Conditionals!\n",
+    "# Sections 3.5 to 3.7\n",
+    "> \n",
     "\n",
-    "- title: Teaching Plan - Booleans and Conditionals\n",
+    "- title: Sections 3.5 to 3.7\n",
     "- toc: false\n",
     "- badges: false\n",
     "- categories: [notebook]"
@@ -64,15 +64,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "false\n"
+     ]
+    }
+   ],
    "source": [
     "grade1 = 90\n",
     "grade2 = 65\n",
     "grade3 = 60\n",
     "grade4 = 75\n",
-    "grade5 = 95"
+    "grade5 = 95\n",
+    "\n",
+    "result = (grade1 + grade2 + grade3 + grade4 + grade5)/5\n",
+    "if result > 80: \n",
+    "    print(\"true\")\n",
+    "else: print (\"false\")"
    ]
   },
   {
@@ -85,7 +102,11 @@
   {
    "cell_type": "code",
    "execution_count": 24,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -142,30 +163,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
+   "execution_count": 14,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1 > 2 or 5 < 12:\n",
-      "24 > 8:\n",
-      "10 > 20:\n"
+      "1 > 2 or 5 < 12: True\n",
+      "24 > 8: False\n",
+      "10 > 20: False\n"
      ]
     }
    ],
    "source": [
     "# Output TRUE  using OR\n",
-    "print(\"1 > 2 or 5 < 12:\",)\n",
+    "print(\"1 > 2 or 5 < 12:\", 1 > 2 or 5 < 12)\n",
     "# Output TRUE  using OR ^\n",
     "\n",
     "\n",
     "# Output FALSE using NOT\n",
-    "print(\"24 > 8:\",)\n",
+    "print(\"24 > 8:\", not 24 > 8,)\n",
     "\n",
     "# Output FALSE using AND\n",
-    "print(\"10 > 20:\",)"
+    "print(\"10 > 20:\", 10 > 20 and false)"
    ]
   },
   {
@@ -206,7 +231,11 @@
   {
    "cell_type": "code",
    "execution_count": 35,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -226,7 +255,11 @@
   {
    "cell_type": "code",
    "execution_count": 36,
-   "metadata": {},
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -256,13 +289,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 22,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "the sum is not 200. Sum: \n",
+      "184\n"
+     ]
+    }
+   ],
    "source": [
-    "num1 =\n",
-    "num2 =\n",
-    "sum = num1 + num2"
+    "num1 = 78\n",
+    "num2 = 106\n",
+    "sum = num1 + num2\n",
+    "\n",
+    "if sum == 200:\n",
+    "    print(\"the sum is 200\")\n",
+    "else: print(\"the sum is not 200. Sum: \"), print(sum)"
    ]
   },
   {
@@ -308,13 +358,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Please come to retake up to a 90 next week at tutorial!\n"
+     ]
+    }
+   ],
    "source": [
     "score = 82\n",
     "if (score >= 90)\n",
@@ -336,13 +394,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Looks great but lets see if we can cut down on sugar, we don't want diabetes!\n"
+     ]
+    }
+   ],
    "source": [
     "protein = 25\n",
     "carbs = 36\n",
@@ -375,13 +441,73 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "note: the double lines || means OR"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Writing Nested Code Activity\n",
     "1. Write a program that fits these conditions using nested conditionals:\n",
     "    - If a person has at least 8 hours, they are experienced\n",
     "    - If a person is experienced their salary is 90k, if they have ten hours or above their salary 150k\n",
     "    - If a person is inexperienced their salary is always 50k\n",
-    "    - print the salary of the person at the end and whether they are experienced or not\n",
+    "    - print the salary of the person at the end and whether they are experienced or not"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "vscode": {
+     "languageId": "javascript"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "Unexpected token else",
+     "output_type": "error",
+     "traceback": [
+      "evalmachine.<anonymous>:11",
+      "else (hours >= 10)",
+      "^^^^",
+      "",
+      "SyntaxError: Unexpected token else",
+      "    at new Script (vm.js:79:7)",
+      "    at createScript (vm.js:251:10)",
+      "    at Object.runInThisContext (vm.js:303:10)",
+      "    at run ([eval]:1020:15)",
+      "    at onRunRequest ([eval]:864:18)",
+      "    at onMessage ([eval]:828:13)",
+      "    at process.emit (events.js:182:13)",
+      "    at emit (internal/child_process.js:812:12)",
+      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
+     ]
+    }
+   ],
+   "source": [
+    "hours= 7\n",
     "\n",
+    "if (hours < 8)\n",
+    "{\n",
+    "        console.log (\"This person is not experienced :(. Your salary is 50K\")\n",
+    "}\n",
+    "else (hours >= 8 && hours < 10)\n",
+    "{\n",
+    "    console.log (\"This person is experienced, they have a salary of 90K\")\n",
+    "}\n",
+    "else (hours >= 10)\n",
+    "{ \n",
+    "    console.log (\"This person is very experiences, they have a salary of 150K\")\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Hacks Assignments:\n",
     "**Conditionals**:\n",
     "\n",
@@ -394,18 +520,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "how long the product has been on the shelf (it expires after 2 months):  1 months\n",
+      "cost: $ 37\n",
+      "this is a regular product\n"
+     ]
+    }
+   ],
    "source": [
     "# Feel free to use JS or Python - we won't discriminate whilst grading you!\n",
     "# Here is a python template for you to use.\n",
     "\n",
-    "= ; \n",
-    "if (): \n",
-    "    print(\"\"); \n",
-    "else: \n",
-    "    print(\"\"); "
+    "#if the age of the product is under 1 month, the product is not expired \n",
+    "age = 1; \n",
+    "cost = 37\n",
+    "\n",
+    "print (\"how long the product has been on the shelf (it expires after 2 months): \", age, \"months\")\n",
+    "print (\"cost: $\", cost,)\n",
+    "if (age > 2): \n",
+    "    print(\"this product is no good\"); \n",
+    "elif (age <= 2 and cost > 50):\n",
+    "    print(\"this product is too expensive\");\n",
+    "elif (age <= 2 and cost >= 25 and cost < 50):\n",
+    "    print(\"this is a regular product\");\n",
+    "elif (cost < 25):\n",
+    "    print (\"this is a cheap product\");"
    ]
   },
   {
@@ -425,7 +570,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.12",
+   "display_name": "Python 3.10.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -439,12 +584,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.10.6"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "40d3a090f54c6569ab1632332b64b2c03c39dcf918b08424e98f38b5ae0af88f"
+    "hash": "aee8b7b246df8f9039afb4144a1f6fd8d2ca17a180786b69acc140d282b71a49"
    }
   }
  },
