--- a/_notebooks/2022-12-01-day3.ipynb
+++ b/_notebooks/2022-12-01-day3.ipynb
@@ -57,7 +57,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "- With the grades below, use a boolean expression to determine if the average grade is above an 80 and print the result (True or False)\n",
+    "- With the grades below, use boolean expressions to determine if the average grade is above an 80 and print the result (True or False)\n",
     "- Try it in as few steps as possible!\n",
     "- Be creative! There are obviously TONS of different practical solutions"
    ]
