--- a/_notebooks/2022-12-01-lesson3.ipynb
+++ b/_notebooks/2022-12-01-lesson3.ipynb
@@ -64,21 +64,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "false\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "grade1 = 90\n",
     "grade2 = 65\n",
@@ -101,30 +93,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "100 == 100: True\n",
-      "Hello == Adios: False\n",
-      "Hello != Adios: True\n",
-      "Hello == Hola: True\n",
-      "5>=4: True\n",
-      "\n",
-      "['a','b','c'] > ['x','y','z']: False\n",
-      "[1,2,3,5] > [1,2,3,4]: True\n",
-      "[1,2,3,5] < [1,2,3,4]: False\n",
-      "[1,2,3,5] == [1,2,3,4]: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "print(\"100 == 100:\",100==100)\n",
     "print(\"Hello == Adios:\",\"greeting\"==\"farewell\")\n",
@@ -139,8 +114,7 @@
     "print(\"['a','b','c'] > ['x','y','z']:\", ['a','b','c'] > ['x','y','z'])\n",
     "print(\"[1,2,3,5] > [1,2,3,4]:\", [1,2,3,5] > [1,2,3,4])\n",
     "print(\"[1,2,3,5] < [1,2,3,4]:\", [1,2,3,5] < [1,2,3,4])\n",
-    "print(\"[1,2,3,5] == [1,2,3,4]:\", [1,2,3,5] == [1,2,3,4])\n",
-    "\n"
+    "print(\"[1,2,3,5] == [1,2,3,4]:\", [1,2,3,5] == [1,2,3,4])"
    ]
   },
   {
@@ -163,23 +137,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 > 2 or 5 < 12: True\n",
-      "24 > 8: False\n",
-      "10 > 20: False\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Output TRUE  using OR\n",
     "print(\"1 > 2 or 5 < 12:\", 1 > 2 or 5 < 12)\n",
@@ -230,21 +194,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greater than y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 20\n",
     "y = 10\n",
@@ -254,21 +210,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "x is greater than y\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "x = 20\n",
     "y = 10\n",
@@ -289,22 +237,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "the sum is not 200. Sum: \n",
-      "184\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "num1 = 78\n",
     "num2 = 106\n",
@@ -358,21 +297,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Please come to retake up to a 90 next week at tutorial!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "score = 82\n",
     "if (score >= 90)\n",
@@ -394,21 +325,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Looks great but lets see if we can cut down on sugar, we don't want diabetes!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "protein = 25\n",
     "carbs = 36\n",
@@ -458,35 +381,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "vscode": {
      "languageId": "javascript"
     }
    },
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "Unexpected token else",
-     "output_type": "error",
-     "traceback": [
-      "evalmachine.<anonymous>:11",
-      "else (hours >= 10)",
-      "^^^^",
-      "",
-      "SyntaxError: Unexpected token else",
-      "    at new Script (vm.js:79:7)",
-      "    at createScript (vm.js:251:10)",
-      "    at Object.runInThisContext (vm.js:303:10)",
-      "    at run ([eval]:1020:15)",
-      "    at onRunRequest ([eval]:864:18)",
-      "    at onMessage ([eval]:828:13)",
-      "    at process.emit (events.js:182:13)",
-      "    at emit (internal/child_process.js:812:12)",
-      "    at process._tickCallback (internal/process/next_tick.js:63:19)"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "hours= 7\n",
     "\n",
@@ -520,19 +421,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "how long the product has been on the shelf (it expires after 2 months):  1 months\n",
-      "cost: $ 37\n",
-      "this is a regular product\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Feel free to use JS or Python - we won't discriminate whilst grading you!\n",
     "# Here is a python template for you to use.\n",
@@ -575,15 +466,7 @@
    "name": "python3"
   },
   "language_info": {
-   "codemirror_mode": {
-    "name": "ipython",
-    "version": 3
-   },
-   "file_extension": ".py",
-   "mimetype": "text/x-python",
    "name": "python",
-   "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
