--- a/_notebooks/2022-12-5-lesson1.ipynb
+++ b/_notebooks/2022-12-5-lesson1.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-   "# Section 3.1 and 3.2\n",
+    "# Section 3.1 and 3.2\n",
     ">\n",
     "- badges: true\n",
     "- comments: true\n",
@@ -16,7 +16,7 @@
    "metadata": {},
    "source": [
     "## Variables\n",
-    "- A variable is an abstraction inside a program that can hold a value\n",
+    "- Variables are an abstraction inside a program that can hold a value\n",
     "- It organizes data by labeling it with a descriptive name\n",
     "- It consists of three parts: name, value, and type\n",
     "- Using meaningful variables names helps with readability of program code and understanding of what values are represented by the variables"
