--- a/_notebooks/2022-12-01-lesson3.ipynb
+++ b/_notebooks/2022-12-01-lesson3.ipynb
@@ -445,6 +445,13 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -457,6 +464,135 @@
     "    - has at least 3 questions\n",
     "- Points will be awarded for creativity, intricacy, and how well Boolean/Binary concepts have been intertwined"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Homework Assignment:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "this is my multiple choice quiz on frogs:\n",
+      " \n",
+      "Question 1: How many toes does a frog have on each foot?\n",
+      "\n",
+      "a : 3\n",
+      "b : 4\n",
+      "c : 5\n",
+      "d : 7\n",
+      "your response was: b\n",
+      "correct\n",
+      "Question 1: What is the life span of a poison dart frog?\n",
+      "\n",
+      "a : 2 - 3 years\n",
+      "b : 4 - 7 months\n",
+      "c : 10 - 15 years\n",
+      "d : 30 - 35 years\n",
+      "your response was: c\n",
+      "correct\n",
+      "Question 1: How much does the largest frog weigh?\n",
+      "\n",
+      "a : 3 pounds\n",
+      "b : 10 pounds\n",
+      "c : 5 pounds\n",
+      "d : 7 pounds\n",
+      "your response was: b\n",
+      "incorrect, the largest frog weighs 7 pounds (as much as a newborn baby\n",
+      "thanks for taking the quiz.. your score was:  2 / 3\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"this is my multiple choice quiz on frogs:\")\n",
+    "print(\" \")\n",
+    "score = 0\n",
+    "\n",
+    "#question 1:\n",
+    "print(\"Question 1: How many toes does a frog have on each foot?\")\n",
+    "q1_answers = {\"a\": \"3\",\n",
+    "              \"b\": \"4\",\n",
+    "              \"c\": \"5\",\n",
+    "              \"d\" : \"7\"}\n",
+    "print(\"\")\n",
+    "for n in q1_answers:\n",
+    "    print(n, \":\", q1_answers[n])\n",
+    "\n",
+    "def users_pick(prompt):\n",
+    "    msg = input()\n",
+    "    return msg\n",
+    "\n",
+    "rsp = users_pick(\"\")\n",
+    "\n",
+    "if rsp == \"b\":\n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"correct\")\n",
+    "    score = score + 1\n",
+    "else: \n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"incorrect, a frog has 4 toes\")\n",
+    "\n",
+    "\n",
+    "#question 2:\n",
+    "print(\"Question 1: What is the life span of a poison dart frog?\")\n",
+    "q1_answers = {\"a\": \"2 - 3 years\",\n",
+    "              \"b\": \"4 - 7 months\",\n",
+    "              \"c\": \"10 - 15 years\",\n",
+    "              \"d\" : \"30 - 35 years\"}\n",
+    "print(\"\")\n",
+    "for n in q1_answers:\n",
+    "    print(n, \":\", q1_answers[n])\n",
+    "\n",
+    "def users_pick(prompt):\n",
+    "    msg = input()\n",
+    "    return msg\n",
+    "\n",
+    "rsp = users_pick(\"\")\n",
+    "\n",
+    "if rsp == \"c\":\n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"correct\")\n",
+    "    score = score + 1\n",
+    "else: \n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"incorrect, the average life span of a poison dart frog is 10 - 15 years\")\n",
+    "    \n",
+    "    \n",
+    "#question 3:\n",
+    "print(\"Question 1: How much does the largest frog weigh?\")\n",
+    "q1_answers = {\"a\": \"3 pounds\",\n",
+    "              \"b\": \"10 pounds\",\n",
+    "              \"c\": \"5 pounds\",\n",
+    "              \"d\" : \"7 pounds\"}\n",
+    "print(\"\")\n",
+    "for n in q1_answers:\n",
+    "    print(n, \":\", q1_answers[n])\n",
+    "\n",
+    "def users_pick(prompt):\n",
+    "    msg = input()\n",
+    "    return msg\n",
+    "\n",
+    "rsp = users_pick(\"\")\n",
+    "\n",
+    "if rsp == \"c\":\n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"correct\")\n",
+    "    score = score + 1\n",
+    "else: \n",
+    "    print(\"your response was:\", rsp)\n",
+    "    print(\"incorrect, the largest frog weighs 7 pounds (as much as a newborn baby\")\n",
+    "    \n",
+    "    \n",
+    "print(\"thanks for taking the quiz.. your score was: \", score, \"/ 3\")"
+   ]
   }
  ],
  "metadata": {
@@ -466,7 +602,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.10.6"
   },
   "orig_nbformat": 4,
